--------------------------------------------------------------------
Data Crow version 5.0  BETA II                Released on 2024-10-10
--------------------------------------------------------------------

[In Progress]
The web server is being rebuild. The old web server, based on Java Server Faces (PrimeFaces), is dropped.
In its stead a new, for now, read-only Web version is being build. Over the next few beta versions you see the addition of;
- a REST web interface API
- a web application based on ReactJS 
This has been decided to future proof the Data Crow web server. The web application will be completely decoupled from the Data Crow main code through the use of the REST web api interface.
The web application could therefore also be deployed on a separate web server and is therefore no longer integrated in the Data Crow server. It will still needs the Data Crow server as this is the server that hosts the data, making it available through the REST web interface (JSON based). 
This also makes it possible, although unlikely that someone will do this, to integrate with the Data Crow server.

[Fixed]
- An issue has been fixed where Data Crow is not correctly positioning itself on the main monitor.
- The open library book search showed a file not found exception if a book cannot be found by its ISBN.
- The service information was incorrectly stored for the open library online book search. This fix only works for newly added items (after this fix).
- Password could not be reset from the client (client - server mode)
- Linux: resizing dialog/forms from the right hand side scrambles the dialog
- Sorting on multi-reference fields was incorrect.
- Backups created on Windows do not restore correctly on Linux.

[To be verified]
- Possible fix for Quick View not showing (to be tested) - issue cannot be reproduced

[Updated]
- Improved the preview for the find and replace.
- Improved the find and replace regular expression support.